# PyPharm

./: README.md  pyproject.toml  setup.py  testik.py
PyPharm/: __init__.py  constants.py  country_optimization.py  genetic_optimization.py  models.py
PyPharm/models/: __init__.py  compartment_models.py  pbpk.py
