[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pypharm"
version = "1.6.4"
description = "Module for solving pharmacokinetic problems"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Krash13", email = "krasheninnikov.r.s@muctr.ru" }
]
requires-python = ">=3.9"
keywords = ["pharmacokinetics", "compartment-model"]
license = { text = "BSD" }

classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

dependencies = [
  "krashemit>=1.0.9",
  "numpy>=1.22.1",
  "scipy<=1.13.0",
  "numba>=0.58.1",
  "matplotlib>=3.5.1",
  "graycode>=1.0.5",
  "numbalsoda>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/Krash13/PyPharm"

[tool.setuptools.packages.find]
where = ["."]
